# RecommenderSystems

./: LICENSE  README.md  app.py  pyproject.toml
data/: books_all_data.parquet  books_enriched_main_data.parquet  books_main_data.parquet  books_with_covers.parquet
notebooks/: Baseline.ipynb  EDA_base.ipynb  First_model.ipynb  cover_search.ipynb  covers_search.ipynb
static/css/: style.css
static/js/: script.js
templates/: form.html
